src/bootstrap/test/v0_8/rejects/08_operator_inherent_collision/main.zg
# requires: v0.17
#
# A type cannot declare both an inherent `fn add` AND `impl T for
# Arithmetic { fn add ... }`. The collision diagnostic fires at
# method-visibility-build time.

struct Counter { n: int }

impl Counter {
    pub fn add(other: Counter) -> Counter {
        return Counter { n: this.n + other.n }
    }
}

impl Counter for Arithmetic {
    pub fn add(other: Counter) -> Counter {
        return Counter { n: this.n + other.n }
    }
    pub fn sub(other: Counter) -> Counter {
        return Counter { n: this.n - other.n }
    }
    pub fn mul(other: Counter) -> Counter {
        return Counter { n: this.n * other.n }
    }
    pub fn div(other: Counter) -> Counter {
        return Counter { n: this.n / other.n }
    }
    pub fn mod(other: Counter) -> Counter {
        return Counter { n: this.n % other.n }
    }
    pub fn neg() -> Counter {
        return Counter { n: -this.n }
    }
}

c := Counter { n: 1 }
d := Counter { n: 2 }
print (c + d).n
